# gpxcsv

./: .gitignore  .travis.yml  LICENSE  README.md  TestGpx.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
Tests/: TestGpx.py  non_trackpoint_extension.gpx
gpxcsv/: __init__.py  __main__.py
src/Tests/: myfile.gpx  testGpx.py
src/gpxcsv/: __init__.py  __main__.py
